CORE-37228: spacing and code correction on balance popup.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/egift-landing-page/component/_egift-balance-check-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/egift-landing-page/component/_egift-balance-check-popup.scss
@@ -193,5 +193,11 @@
     .egift-type-another_card {
       cursor: pointer;
     }
+
+    .egift-type-resend_otp {
+      span:first-child {
+        margin-right: 3px;
+      }
+    }
   }
 }
